<resources>
    <string name="app_name">RevisionCards2</string>
    <string name="Add">Ajouter</string>
    <string name="Edit">Modifier</string>
    <string name="Delete">Supprimer</string>
    <string name="Cancel">Annuler</string>
    <string name="Close">Fermer</string>
    <string name="Yes">Oui</string>
    <string name="No">Non</string>
    <string name="Error_occurred">Une erreur est survenue</string>
    <string name="Home">Accueil</string>
    <string name="Revision">Révision</string>
    <string name="Revision_selection">Révision : sélection</string>
    <string name="Review">Réviser</string>
    <string name="Selection">Sélection</string>
    <string name="Creation">Création</string>
    <string name="Add_folder_card">Ajouter dossier/fiche</string>
    <string name="Edit_folder_0">Modifier un thème</string>
    <string name="Edit_folder_1">Modifier une partie</string>
    <string name="Edit_folder_2">Modifier une sous-partie</string>
    <string name="Edit_card">Modifier une fiche</string>
    <string name="Delete_folder_0">Supprimer un thème</string>
    <string name="Delete_folder_1">Supprimer une partie</string>
    <string name="Delete_folder_2">Supprimer une sous-partie</string>
    <string name="Delete_card">Supprimer une fiche</string>
    <string name="Delete_folder_0_confirmation">Êtes-vous sûr de vouloir supprimer le thème %s ?</string>
    <string name="Delete_folder_1_confirmation">Êtes-vous sûr de vouloir supprimer la partie %s ?</string>
    <string name="Delete_folder_2_confirmation">Êtes-vous sûr de vouloir supprimer la sous-partie %s ?</string>
    <string name="Delete_card_confirmation">Êtes-vous sûr de supprimer la fiche %s ?</string>
    <string name="Folder_0_mode">Thème : </string>
    <string name="Folder_1_mode">Partie : </string>
    <string name="Folder_2_mode">Sous-partie : </string>
    <string name="Card">Fiche</string>
    <string name="Name">Nom</string>
    <string name="Text_1">Texte 1</string>
    <string name="Text_2">Texte 2</string>
    <string name="Cards">Fiches</string>
    <string name="Must_select_cards">Veuillez sélectionner des fiches</string>
    <string name="Nb_selected_cards">Fiches sélectionnées : %d</string>
    <string name="Nb_selected_cards_init">Fiches sélectionnées : 0</string>
    <string name="Successful">Réussi</string>
    <string name="Average">Moyen</string>
    <string name="Failed">Raté</string>
    <string name="No_score">Pas de score</string>
    <string name="Score_display">Score : %d%%</string>
    <string name="Write_permissions_request_message">Les droits d\'écriture sont nécessaires pour la sauvegarde des données.\nVoulez-vous continuer ?</string>
    <string name="Overwrite_data">Écraser les données ?</string>
    <string name="Overwrite_data_confirmation">Voulez-vous écraser les données actuelles ?</string>
    <string name="Backup">Sauvegarder</string>
    <string name="Backup_running">Sauvegarde en cours</string>
    <string name="Backup_success">Données sauvegardées</string>
    <string name="Backup_fail">Erreur à la sauvegarde des données</string>
    <string name="Restore">Restaurer</string>
    <string name="No_data_to_restore">Aucune donnée à restaurer</string>
    <string name="Restore_running">Restauration en cours</string>
    <string name="Restore_success">Données restaurées</string>
    <string name="Restore_fail">Erreur à la restauration des données</string>
    <string name="Restore_fail_no_version">Erreur à la restauration des données, numéro de version manquant</string>
    <string name="Restore_fail_wrong_version">Erreur à la restauration des données, numéro de version inconnu : %d</string>
    <string name="Fill_database">Remplir</string>
    <string name="Filling_database">Remplissage en cours</string>
    <string name="Fill_database_end">Base de données remplit</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
    <string name="ic_drive_ms_word">&#xe07e;</string>
    <string name="ic_drive_pdf">&#xe07f;</string>
    <string name="ic_drive_presentation">&#xe080;</string>
    <string name="ic_drive_script">&#xe081;</string>
    <string name="ic_drive_site">&#xe082;</string>
    <string name="ic_drive_spreadsheet">&#xe083;</string>
    <string name="ic_drive_video">&#xe084;</string>
    <string name="ic_drive_zip">&#xe085;</string>
    <string name="ic_earth">&#xe086;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_error">&#xe088;</string>
    <string name="ic_event">&#xe089;</string>
    <string name="ic_exit_to_app">&#xe08a;</string>
    <string name="ic_expand_less">&#xe08b;</string>
    <string name="ic_expand_more">&#xe08c;</string>
    <string name="ic_explore">&#xe08d;</string>
    <string name="ic_extension">&#xe08e;</string>
    <string name="ic_fast_forward">&#xe08f;</string>
    <string name="ic_fast_rewind">&#xe090;</string>
    <string name="ic_favorite">&#xe091;</string>
    <string name="ic_favorite_outline">&#xe092;</string>
    <string name="ic_file_download">&#xe093;</string>
    <string name="ic_file_upload">&#xe094;</string>
    <string name="ic_filter">&#xe095;</string>
    <string name="ic_flag">&#xe096;</string>
    <string name="ic_flash_auto">&#xe097;</string>
    <string name="ic_flash_off">&#xe098;</string>
    <string name="ic_flash_on">&#xe099;</string>
    <string name="ic_flights">&#xe09a;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
</resources>