<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_home_review_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Review"
        android:layout_marginTop="15dp"
        android:width="210dp"
        android:height="70dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/activity_home_cards_manage_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Cards"
        android:layout_marginTop="15dp"
        android:width="210dp"
        android:height="70dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/activity_home_backup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Backup"
        android:layout_marginTop="15dp"
        android:width="210dp"
        android:height="70dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/activity_home_restore_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Restore"
        android:layout_marginTop="15dp"
        android:width="210dp"
        android:height="70dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/activity_home_fill_database_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Fill_database"
        android:layout_marginTop="15dp"
        android:width="210dp"
        android:height="70dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/activity_home_message_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:width="210dp"
        android:textSize="25sp"
        android:textColor="@android:color/black" />

</LinearLayout>