<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/dialog_edit_card_name_text"
        android:inputType="text|textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/Name"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/dialog_edit_card_text1_text"
        android:inputType="text|textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/Text_1"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/dialog_edit_card_text2_text"
        android:inputType="text|textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/Text_2"
        android:imeOptions="actionDone"
        tools:ignore="Autofill" />

</LinearLayout>