<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="48dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/folder_bottom_border">

    <CheckBox
        android:id="@+id/node_cards_manager_card_folder_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true" />

    <com.github.johnkil.print.PrintView
        android:id="@+id/node_cards_manager_card_folder_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/node_cards_manager_card_folder_check"
        app:iconText="@string/ic_folder"
        app:iconColor="@android:color/black"
        app:iconFont="fonts/material-icon-font.ttf"
        app:iconSize="20dp" />

    <com.github.johnkil.print.PrintView
        android:id="@+id/node_cards_manager_folder_arrow_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/node_cards_manager_card_folder_icon"
        app:iconText="@string/ic_keyboard_arrow_right"
        app:iconColor="@android:color/black"
        app:iconFont="fonts/material-icon-font.ttf"
        app:iconSize="20dp" />

    <TextView
        android:id="@+id/node_cards_manager_folder_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/node_cards_manager_folder_arrow_icon"
        android:layout_toStartOf="@+id/node_cards_manager_folder_buttons_container"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/node_cards_manager_folder_buttons_container"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.github.johnkil.print.PrintView
            android:id="@+id/node_cards_manager_folder_edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:iconText="@string/ic_create"
            app:iconColor="@android:color/black"
            app:iconFont="fonts/material-icon-font.ttf"
            app:iconSize="20dp" />

        <com.github.johnkil.print.PrintView
            android:id="@+id/node_cards_manager_folder_delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:iconText="@string/ic_delete"
            app:iconColor="@android:color/black"
            app:iconFont="fonts/material-icon-font.ttf"
            app:iconSize="20dp" />

    </LinearLayout>

</RelativeLayout>