<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="48dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/card_bottom_border">

    <com.github.johnkil.print.PrintView
        android:id="@+id/node_cards_manager_card_card_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_alignParentStart="true"
        app:iconText="@string/ic_content_copy"
        app:iconColor="@android:color/black"
        app:iconFont="fonts/material-icon-font.ttf"
        app:iconSize="20dp" />

    <TextView
        android:id="@+id/node_cards_manager_card_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/node_cards_manager_card_card_icon"
        android:layout_toStartOf="@+id/node_cards_manager_card_score_text"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/node_cards_manager_card_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/node_cards_manager_card_buttons_container"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/node_cards_manager_card_buttons_container"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.github.johnkil.print.PrintView
            android:id="@+id/node_cards_manager_card_edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:iconText="@string/ic_create"
            app:iconColor="@android:color/black"
            app:iconFont="fonts/material-icon-font.ttf"
            app:iconSize="20dp" />

        <com.github.johnkil.print.PrintView
            android:id="@+id/node_cards_manager_card_delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:iconText="@string/ic_delete"
            app:iconColor="@android:color/black"
            app:iconFont="fonts/material-icon-font.ttf"
            app:iconSize="20dp" />

    </LinearLayout>

</RelativeLayout>